// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all parameters 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Musik | test
    </title>
  </HelmetWrapper>
  <div
    className="page page-test"
  >
    test
  </div>
</Fragment>
`;

exports[`renders correctly with id only 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Musik | test
    </title>
  </HelmetWrapper>
  <div
    className="page page-base page-test"
  >
    test
  </div>
</Fragment>
`;
